apps/openzaak/additionalmanifests/local/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openzaak
  namespace: publicground
spec:
  parentRefs:
  - name: gateway-local
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - "openzaak.wigo4it.nl"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openzaak-nginx
      port: 80
